# FormatFactory

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/roj/formatfactory/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/roj/formatfactory/: AppConstant.kt  AudioFormatSelectFragment.kt  AudioSettingsActivity.kt  FFmpegUtils.kt  FormatSelectActivity.kt  MainActivity.kt  StartParseActivity.kt  VideoFormatSelectFragment.kt
app/src/main/java/com/roj/formatfactory/adapter/: FunctionAdapter.kt  FunctionFragmentAdapter.kt
app/src/main/java/com/roj/formatfactory/beans/: AudioParseOption.kt  MediaInfo.kt
app/src/main/java/com/roj/formatfactory/config/: NoArg.java
app/src/main/jni/: cmdutils.c  ffmpeg.c  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_opt.c  ffmpeg_thread.cpp  ffmpeg_utils.cpp  media_utils.cpp  mylog.c
app/src/main/jni/includes/: config.h  ffmpeg_thread.h  mylog.h
app/src/main/jni/includes/libavutil/: dict.h  ffversion.h
app/src/main/jni/includes/libtools/: cmdutils.h  ffmpeg.h
app/src/main/res/drawable/: horizontal_divider.xml  ic_audio.xml  ic_video.xml  vertical_divider.xml
app/src/main/res/layout/: activity_audio_settings.xml  activity_format_select.xml  activity_main.xml  activity_start_parse.xml  fragment_format_select.xml  item_function.xml  item_info.xml
app/src/main/res/menu/: media_settings.xml  save.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/roj/formatfactory/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
